--- a/package.json
+++ b/package.json
@@ -18,5 +18,13 @@
   "bugs": {
     "url": "https://github.com/yanni4night/strict/issues"
   },
-  "homepage": "https://github.com/yanni4night/strict"
+  "homepage": "https://github.com/yanni4night/strict",
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-contrib-coffee": "~0.12.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-shell": "~1.1.1",
+    "load-grunt-tasks": "~1.0.0",
+    "time-grunt": "~1.0.0"
+  }
 }
