--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   },
   "homepage": "https://github.com/yanni4night/strict",
   "devDependencies": {
+    "coffeelint": "~1.8.1",
     "grunt": "~0.4.5",
+    "grunt-coffeelint": "~0.0.13",
     "grunt-contrib-coffee": "~0.12.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-shell": "~1.1.1",
-    "load-grunt-tasks": "~1.0.0",
+    "load-grunt-tasks": "~2.0.0",
     "time-grunt": "~1.0.0"
   }
 }
